# xrdslam

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
configs/replica/: devices.yaml
deepslam/common/: common.py  datasets.py  frame.py  mesher.py
deepslam/configs/: base_config.py  input_config.py
deepslam/engine/: optimizers.py  schedulers.py  xrdslamer.py
deepslam/methods/: base_method.py  coslam.py  nice_slam.py  point_slam.py  splatam.py  voxfusion.py
deepslam/model_components/: decoder_coslam.py  decoder_nice.py  decoder_voxfusion.py  gaussian_cloud_splaTAM.py  slam_external_splatam.py  slam_helpers_splatam.py  voxel_helpers_voxfusion.py
deepslam/models/: JointEncoding.py  base_model.py  conv_onet.py  conv_onet2.py  gaussian_splatting.py  sparse_voxel.py
deepslam/pipeline/: mapper.py  tracker.py  visualizer.py  xrdslam.py
deepslam/utils/: utils.py
docs/: Adding_a_New_Method.md  Benchmark.md  benchmark.md
sample/: my_slam.py
scripts/: download_data.py  eval.py  run.py  viewer.py
scripts/utils/: eval_ate.py  eval_recon.py  viz_utils.py
slam/algorithms/: base_algorithm.py  coslam.py  dpvo.py  my_slam.py  neural_recon.py  nice_slam.py  point_slam.py  splatam.py  voxfusion.py
slam/common/: camera.py  common.py  datasets.py  frame.py  mesher.py
slam/configs/: base_config.py  config_utils.py  input_config.py
slam/engine/: optimizers.py  schedulers.py  xrdslamer.py
slam/methods/: base_method.py  coslam.py  nice_slam.py  point_slam.py  splatam.py  (+1 more)
(+45 files in other folders)
